docs(rules): cicd.md에 Jib 빌드, GitHub Actions CI/CD, 릴리스 관리 추가